force-app/main/default/objects/Marketing_Activity__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Enter a date where you expect the activity to impact footfall/Sales in the Village. This is not necessarily the date the email is being sent</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>