force-app/main/default/objects/Marketing_Activity__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aboards</fullName>
            </value>
            <value>
                <fullName>Art gallery</fullName>
            </value>
            <value>
                <fullName>Billboards/posters</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Brochure/magazine</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
            </value>
            <value>
                <fullName>Bus cover</fullName>
            </value>
            <value>
                <fullName>Digital media</fullName>
            </value>
            <value>
                <fullName>Emailing</fullName>
            </value>
            <value>
                <fullName>Empty units vinyls</fullName>
            </value>
            <value>
                <fullName>Enewsletter</fullName>
            </value>
            <value>
                <fullName>E-newsletter/database</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook ads</fullName>
            </value>
            <value>
                <fullName>Fam trips</fullName>
            </value>
            <value>
                <fullName>Foursquare</fullName>
            </value>
            <value>
                <fullName>Google ads</fullName>
            </value>
            <value>
                <fullName>HFS</fullName>
            </value>
            <value>
                <fullName>Home delivery</fullName>
            </value>
            <value>
                <fullName>Hotel invites</fullName>
            </value>
            <value>
                <fullName>Influencers communication</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>In store signage</fullName>
            </value>
            <value>
                <fullName>Ipad</fullName>
            </value>
            <value>
                <fullName>Mobile app</fullName>
            </value>
            <value>
                <fullName>Mobile display</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Olapic</fullName>
            </value>
            <value>
                <fullName>On board brochures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>