force-app/main/default/objects/Marketing_Activity__c/fields/Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel__c</fullName>
    <description>..</description>
    <label>Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Agency Fee</fullName>
            </value>
            <value>
                <fullName>App Innovations</fullName>
                <label>App Development</label>
            </value>
            <value>
                <fullName>Books/Magazines</fullName>
            </value>
            <value>
                <fullName>Brand Events</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
                <label>Brochure/Leaflet</label>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Christmas Lights</fullName>
            </value>
            <value>
                <fullName>Cinema/Theatre</fullName>
            </value>
            <value>
                <fullName>Community Marketing</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Copywriting</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
            <value>
                <fullName>Digital Travel Platforms</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Display: Biddable</fullName>
            </value>
            <value>
                <fullName>Display: Non - Biddable</fullName>
            </value>
            <value>
                <fullName>Donations - Not Tax-Deductible</fullName>
            </value>
            <value>
                <fullName>Donations - Tax Deductible</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Entertaining Staff Only</fullName>
            </value>
            <value>
                <fullName>Entertaining Third Parties/Mixed</fullName>
            </value>
            <value>
                <fullName>Expats</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook &amp; Instagram (Organic)</fullName>
                <label>Facebook &amp; Instagram (Owned)</label>
            </value>
            <value>
                <fullName>Facebook &amp; Instagram (Paid Social)</fullName>
            </value>
            <value>
                <fullName>Familiarisation Trips</fullName>
            </value>
            <value>
                <fullName>Financial Partnerships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>