force-app/main/default/objects/Marketing_Activity__c/fields/Sub_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel_Type__c</fullName>
    <label>Sub Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Channel__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aboard</fullName>
            </value>
            <value>
                <fullName>Art Gallery</fullName>
            </value>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Bus Cover</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Chic Travel</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Empty Unit Vinyls</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fam Trip</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Gifting</fullName>
            </value>
            <value>
                <fullName>Google+</fullName>
            </value>
            <value>
                <fullName>Guest Welcome Centre</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Inflight Magazine Advertising</fullName>
            </value>
            <value>
                <fullName>Inflight Magazine Advertorial</fullName>
            </value>
            <value>
                <fullName>Inflight Video</fullName>
            </value>
            <value>
                <fullName>Installations</fullName>
            </value>
            <value>
                <fullName>In Store Signage</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>KOL</fullName>
            </value>
            <value>
                <fullName>Magazine Advertising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>