force-app/main/default/objects/Marketing_Activity__c/fields/Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Subject_Line__c</fullName>
    <inlineHelpText>e.g. Up to 80% off: Final reductions now on</inlineHelpText>
    <label>Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>