force-app/main/default/objects/Marketing_Activity__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>