force-app/main/default/objects/Marketing_Activity__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <inlineHelpText>e.g. 1x8x2</inlineHelpText>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>