force-app/main/default/objects/Marketing_Activity__c/fields/Third_Party_Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Actual_Spend__c</fullName>
    <inlineHelpText>For the third party to fill in – the amount of money spent in the end on that activity for eg some adverts will</inlineHelpText>
    <label>3rd Party actual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>