force-app/main/default/objects/Marketing_Activity__c/fields/Tier_Status__c.field-meta.xml
<CustomField>
    <fullName>Tier_Status__c</fullName>
    <description>The status that the Tier level is in</description>
    <inlineHelpText>The status that the Tier level is in</inlineHelpText>
    <label>Tier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved in Principle</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Re-submission required</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>