force-app/main/default/objects/Marketing_Activity__c/fields/Total_Activity_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Activity_Cost__c</fullName>
    <formula>Actual_Cost__c +  Committed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual cost + committed costs</inlineHelpText>
    <label>[Oracle] Total Activity Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>