force-app/main/default/objects/Marketing_Activity__c/fields/Tracked_Average_Spend__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Average_Spend__c</fullName>
    <label>Tracked Average Spend</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>