force-app/main/default/objects/Marketing_Activity__c/fields/Tracked_Sales__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Sales__c</fullName>
    <label>Tracked Sales</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>