force-app/main/default/objects/Marketing_Activity__c/fields/Transfer_Redemptions_Now__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Redemptions_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>select to transfer redemptions from old style redeemable campaigns immediatly</inlineHelpText>
    <label>Transfer Redemptions Now</label>
    <type>Checkbox</type>
</CustomField>