force-app/main/default/objects/Marketing_Activity__c/fields/Transfer_Redemptions_on_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Redemptions_on_Go_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to migrate VIP redemptions from old style Redeemable Campaigns upon go live</inlineHelpText>
    <label>Transfer Redemptions on Go Live</label>
    <type>Checkbox</type>
</CustomField>