force-app/main/default/objects/Marketing_Activity__c/fields/Transfer_To_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To_Oracle__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the activity to be transferred to Oracle Projects</description>
    <inlineHelpText>Allow the activity to be transferred to Oracle Projects</inlineHelpText>
    <label>Transfer To Oracle</label>
    <type>Checkbox</type>
</CustomField>