force-app/main/default/objects/Marketing_Activity__c/fields/VR_Rep_Office__c.field-meta.xml
<CustomField>
    <fullName>VR_Rep_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the VR Rep responsible for this Activity</inlineHelpText>
    <label>VR Rep Office</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The VR Rep Office must be an AVIA/GULF Rep</errorMessage>
        <filterItems>
            <field>User.Role_Name__c</field>
            <operation>equals</operation>
            <value>Tourism Consultant</value>
        </filterItems>
        <infoMessage>Please select a GULF/AVIA Rep</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Rep_Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>