force-app/main/default/objects/Marketing_Activity__c/fields/x18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>x18_digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 digit ID</label>
    <type>Text</type>
</CustomField>