force-app/main/default/objects/Marketing_Activity__c/fields/X3rd_Party_Assigned__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Assigned__c</fullName>
    <formula>Creative_Agency_Access_To_Salesforce__r.Email  &amp; &apos; &apos; &amp; Creative_Agency_2__r.Email &amp; &apos; &apos; &amp; Creative_Agency_3__r.Email &amp; &apos; &apos; &amp; Creative_Agency_4__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Assigned</label>
    <type>Text</type>
</CustomField>