force-app/main/default/objects/Marketing_Activity__c/recordTypes/General_Activity.recordType-meta.xml
<RecordType>
    <fullName>General_Activity</fullName>
    <active>true</active>
    <description>No QR Code...</description>
    <label>General Activity</label>
</RecordType>