force-app/main/default/objects/Marketing_Activity__c/recordTypes/Partnership_Promotion.recordType-meta.xml
<RecordType>
    <fullName>Partnership_Promotion</fullName>
    <active>true</active>
    <description>QR Code...</description>
    <label>Partnership Promotion</label>
</RecordType>