force-app/main/default/objects/Marketing_Activity__c/validationRules/Business_Function_cant_be_Local.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Function_cant_be_Local</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(Marketing_Campaign__r.RecordType.Name, &apos;Village&apos;), NOT(CONTAINS(TEXT(Business_Function__c), &apos;Local&apos;)) )</errorConditionFormula>
    <errorDisplayField>Business_Function__c</errorDisplayField>
    <errorMessage>If Campaign&apos;s Record Type is Village Business Function has to be Local</errorMessage>
</ValidationRule>