force-app/main/default/objects/Marketing_Activity__c/validationRules/Business_Function_has_to_be_Local.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Function_has_to_be_Local</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(CONTAINS(Marketing_Campaign__r.RecordType.Name, &apos;Village&apos;)), CONTAINS(TEXT(Business_Function__c), &apos;Local&apos;))</errorConditionFormula>
    <errorDisplayField>Business_Function__c</errorDisplayField>
    <errorMessage>If Campaign&apos;s Record Type is TBVSC, Business Function cannot be Local</errorMessage>
</ValidationRule>