force-app/main/default/objects/Marketing_Activity__c/validationRules/Check_Campaign_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Campaign_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Setup.Global_Object_Validation__c.Marketing_Activity_Validations_Active__c,
Start_Date__c  &gt;  Marketing_Campaign__r.End_Date__c &amp;&amp;  Continue_with_Date_error__c  = false,
false)</errorConditionFormula>
    <errorDisplayField>Marketing_Campaign__c</errorDisplayField>
    <errorMessage>You have selected a campaign which has expired, are you sure this is correct?</errorMessage>
</ValidationRule>