force-app/main/default/objects/Marketing_Activity__c/validationRules/Coniq_ID_Entered_Confirmation.validationRule-meta.xml
<ValidationRule>
    <fullName>Coniq_ID_Entered_Confirmation</fullName>
    <active>false</active>
    <description>Forces user to confirm whether they have/have not entered the Responsys ID, report can be then be traced to discover why not.</description>
    <errorConditionFormula>IF($Setup.Global_Object_Validation__c.Marketing_Activity_Validations_Active__c, 
ISBLANK( TEXT(Coniq_ID_Entered__c) ),
false)</errorConditionFormula>
    <errorDisplayField>Coniq_ID_Entered__c</errorDisplayField>
    <errorMessage>Please confirm you have entered a Coniq ID into the Coniq Portal</errorMessage>
</ValidationRule>