force-app/main/default/objects/Marketing_Activity__c/validationRules/Date_Validation_end_start_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation_end_start_dates</fullName>
    <active>true</active>
    <description>Do not allow the dates to be entered incorrectly</description>
    <errorConditionFormula>$Setup.Global_Object_Validation__c.Marketing_Activity_Validations_Active__c &amp;&amp;
Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The Start Date of the Activity cannot be after the End Date</errorMessage>
</ValidationRule>