force-app/main/default/objects/Marketing_Activity__c/validationRules/Date_Validation_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation_EndDate</fullName>
    <active>true</active>
    <description>Date_Validation_EndDate</description>
    <errorConditionFormula>End_Date__c  &gt;

ADDMONTHS(  Marketing_Campaign__r.End_Date__c  ,+6)</errorConditionFormula>
    <errorMessage>The End Date can be only 6 MONTHS MORE than the associated Marketing Campaign&apos;s End Date.</errorMessage>
</ValidationRule>