force-app/main/default/objects/Marketing_Activity__c/validationRules/Date_Validation_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation_StartDate</fullName>
    <active>true</active>
    <description>Date_Validation_StartDate</description>
    <errorConditionFormula>Start_Date__c &lt;

 ADDMONTHS( Marketing_Campaign__r.Start_Date__c ,-6)</errorConditionFormula>
    <errorMessage>The Start Date can be only 6 MONTHS LESS than the associated Marketing Campaign&apos;s Start Date.</errorMessage>
</ValidationRule>