force-app/main/default/objects/Marketing_Activity__c/validationRules/Marketing_Campaign_Readonly.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Campaign_Readonly</fullName>
    <active>true</active>
    <description>Marketing_Campaign_Readonly</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Marketing_Campaign__c)
)</errorConditionFormula>
    <errorMessage>Marketing Campaign is a Read-Only Field.</errorMessage>
</ValidationRule>